# datasette-lite

./: Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
_config/css/: mysoc.css
_config/templates/: base.html  database.html  lite_index.html  table.html  temp_base.html
_config/templates/pages/: about.html
script/: server  test
src/datasette_lite/: __main__.py  build.py
src/datasette_lite/jinja_templates/: base_lite_index.html  webworker.js  webworker.py
tests/: test_meta.py
